# physics-informed-neural-networks

./: .gitignore  NOTES.md  pyproject.toml
.claude/specs/: 2d-source-concentrated-sampling.md  2d-training-throughput.md  canonical-pinn-moving-source.md  full-burner-motion.md  inverse-operator-moving-source.md  pinn-2d-pideeponet-forward.md  refactor-microservices.md
core/: analytic.py  nondim.py  physics.py
experiments/: check_consistency.py  config.yaml  config_inverse.yaml  config_inverse_arb.yaml  model.py  model_inverse.py  overfit_cases.py  overfit_one.py  requirements.txt  train_inverse.py  validate_checkpoint.py  validate_inverse.py
experiments/tests/: test_analytic.py  test_intrinsic.py  test_physics.py
experiments/validation/: report.py
inference-service/: .dockerignore  main.py  model.py  predictor.py  requirements.txt
memory/problems/: forward-2d-pideeponet.md  goal.md
service-operator/: config.yaml  config_deeponet.yaml  data.py  precompute_labels.py  trainer.py
service-operator/validation/: fdm.py  intrinsic.py  report.py
service-pinn/: config.yaml  model.py  train.py
training-service/: Dockerfile  config.yaml  inspect_model.py  model.py  physics.py  sampler.py  train.py  trainer.py
training-service-2d/: analytic.py  config.yaml  config_linear.yaml  config_linear_big.yaml  data.py  inverse_data.py  model.py  model_inverse.py  nondim.py  precompute_labels.py  train.py  train_inverse.py  trainer.py  trajectory.py
training-service-2d/tests/: test_fdm.py  test_model.py  test_nondim.py  test_train_smoke.py  test_trajectory.py
(+19 files in other folders)
