[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-core"
version = "0.1.0"
description = "Shared physics/analytic/model building blocks for the PINN microservices"
requires-python = ">=3.10"
dependencies = ["torch>=2.2", "numpy>=1.26", "scipy>=1.12", "pyyaml>=6.0"]

[tool.setuptools]
packages = ["core"]
